...
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vEN-PC-Bz9">
                                        <rect key="frame" x="0.0" y="0.0" width="500" height="1105"/>
                                        <subviews>
                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="UpX-Bf-ZT6">
                                                <rect key="frame" x="0.0" y="0.0" width="500" height="32"/>
                                                <segments>
                                                    <segment title="First"/>
                                                    <segment title="Second"/>
                                                </segments>
                                            </segmentedControl>
                                            <slider opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="WB2-p2-bYm">
                                                <rect key="frame" x="-2" y="31" width="504" height="31"/>
                                            </slider>
                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QsG-uN-yAh">
                                                <rect key="frame" x="0.0" y="61" width="502" height="31"/>
                                                <accessibility key="accessibilityConfiguration" identifier="TestSwitch"/>
                                            </switch>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="700" verticalCompressionResistancePriority="700" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0br-EX-AUP">
                                                <rect key="frame" x="0.0" y="92" width="500" height="47"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="47" id="Dna-hz-Y3S"/>
                                                </constraints>
                                                <state key="normal" title="TapMe">
                                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                            </button>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Eas-vY-Wds">
                                                <rect key="frame" x="0.0" y="139" width="500" height="44"/>
                                                <constraints>
...
                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" spellCheckingType="yes"/>
                                            </textView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FAz-sk-QmU">
                                                <rect key="frame" x="0.0" y="575" width="500" height="30"/>
                                                <accessibility key="accessibilityConfiguration" label="debugLabel"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="ISq-on-qGZ"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
...
